--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 My research topics include: (i) <strong>generative models</strong>: demystifying attention sink in LLMs [<a href="https://openreview.net/forum?id=78Nn4QJTEN">ICLR'2025 Spotlight</a>], and demystifying memorization in diffusion models [<a href="https://openreview.net/forum?id=D3DBqvSDbj">TMLR'2025</a>]; (ii) <strong>AI safety</strong>: introducing infectious jailbreak for (multimodal) LLM multi-agents [<a href="https://openreview.net/forum?id=DYMj03Gbri">ICML'2024</a>], and elucidating confidence calibration on LLM guard models [<a href="https://openreview.net/forum?id=wUbum0nd9N">ICLR'2025</a>]; (iii) <strong>singing/speech</strong>: application of machine learning, e.g. multimodal learning [<a href="https://dl.acm.org/doi/pdf/10.1145/3503161.3548411">MM'2022 Oral</a>, <a href="https://dl.acm.org/doi/pdf/10.1145/3651310">TOMM'2024</a>], multi-distribution learning (domain adaptation [<a href="https://arxiv.org/pdf/2207.09747">ISMIR'2022</a>, <a href="https://dl.acm.org/doi/pdf/10.1145/3651310">TOMM'2024</a>], fairness [<a href="https://dl.acm.org/doi/pdf/10.1145/3581783.3612272">MM'2023</a>]), to singing/speech techniques.
               </p> -->
               <p>
-                <font color="red"><strong>I am looking for full-time research scientist positions, please contact me if you are interested in my research.</strong></font>
+                <font color="red"><strong>I am looking for full-time research scientist/engineer positions, please contact me if you are interested in my research.</strong></font>
               </p>
 
               <p style="text-align:center">
