--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
           <ul>
             <li>
-              <strong>[2025.11]</strong>: I was invited to give a talk about <strong>Attention Sink in LLMs and its Applications</strong> by <a href="https://www.ee.tsinghua.edu.cn/en/">Department of Eletronic Engineering, Tsinghua University</a> and <a href="https://hunyuan.tencent.com/visual">Tencent Hunyuan</a>.
+              <strong>[2025.11]</strong>: I was invited to give a talk about <strong>Attention Sink in LLMs and its Applications</strong> by <a href="https://www.ee.tsinghua.edu.cn/en/">Department of Electronic Engineering, Tsinghua University</a> and <a href="https://hunyuan.tencent.com/visual">Tencent Hunyuan</a>.
             </li>
             <li>
               <strong>[2025.11]</strong>: I re-joined <a href="https://deepmind.google/">Google Deepmind (GDM)</a> in Singapore office to continue as a student researcher!
@@ -769,7 +769,7 @@
               
               <tr>
                 <td width="100%" valign="center">
-                  <strong>[2025.11]</strong>: <a href="https://www.ee.tsinghua.edu.cn/en/">Department of Eletronic Engineering, Tsinghua University</a> and <a href="https://hunyuan.tencent.com/visual">Tencent Hunyuan</a>, invited talk on <strong>Attention Sink in LLMs and its Applications</strong>.
+                  <strong>[2025.11]</strong>: <a href="https://www.ee.tsinghua.edu.cn/en/">Department of Electronic Engineering, Tsinghua University</a> and <a href="https://hunyuan.tencent.com/visual">Tencent Hunyuan</a>, invited talk on <strong>Attention Sink in LLMs and its Applications</strong>.
                   <br>
                   <strong>[2025.10]</strong>: Google Deepmind Team DL: Agent Frontier, talk on <strong>Looking into LLMs: From Tokens to Solutions</strong>.
                   <br>
