--- a/index.html
+++ b/index.html
@@ -830,7 +830,7 @@
               <td valign="top" width="70%">
                 <papertitle>Tsinghua University
                   <br>
-                  B.E. degree in Eletronic Engineering and B.S. degree in Finance</papertitle><br><br>
+                  B.E. degree in Electronic Engineering and B.S. degree in Finance</papertitle><br><br>
                   <i><span style="font-size: 9pt;">
                     08.2017 - 06.2021 (Beijing, China) 
                   </i>
