--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
                 <name>Xiangming Gu</name>
               </p>
               <p>
-                I am a final-year Ph.D. candidate from <a href="https://www.nus.edu.sg">National University of Singapore</a> and a student researcher at <a href="https://deepmind.google/">Google Deepmind</a>. I obtained my bachelor degrees from <a href="https://www.tsinghua.edu.cn/en/">Tsinghua University</a> in 2021, and was a research intern at <a href="https://sail.sea.com">Sea AI Lab</a>.
+                I am a student researcher at <a href="https://deepmind.google/">Google Deepmind</a> and a final-year Ph.D. candidate from <a href="https://www.nus.edu.sg">National University of Singapore</a>. I obtained my bachelor degrees from <a href="https://www.tsinghua.edu.cn/en/">Tsinghua University</a> in 2021, and was a research intern at <a href="https://sail.sea.com">Sea AI Lab</a>.
                 <!-- I am a final-year Ph.D. candidate from <a href="https://www.nus.edu.sg">National University of Singapore</a>, supervised by Prof. <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Ye Wang</a>. I earned my B.E. degree of Electronic Engineering and B.S. degree of Finance from <a href="https://www.tsinghua.edu.cn/en/">Tsinghua University</a> in 2021. -->
               </p>
               <!-- <p>
                 I am a student researcher at <a href="https://deepmind.google/">Google Deepmind</a> in Singapore (was based in London, United Kingdom), where I am hosted by <a href="https://petar-v.com/">Petar Veličković</a> and <a href="https://scholar.google.ru/citations?user=jM6Y0yAAAAAJ&hl=en">Larisa Markeeva</a>, and work closely with <a href="https://www.razp.info">Razvan Pascanu</a> and <a href="https://sohamde.github.io">Soham De</a>. I was lucky to be mentored by <a href="https://p2333.github.io">Tianyu Pang</a> and <a href="https://duchao0726.github.io">Chao Du</a> at <a href="https://sail.sea.com">Sea AI lab (SAIL)</a>, Singapore, where I also worked closely with <a href="https://siviltaram.github.io">Qian Liu</a> and <a href="https://linmin.me">Min Lin</a>.
               </p> -->
               <p>
-                My recent research focus is to <strong>understand, advance and safely deploy generative models and agents</strong>. My next vision is to enable LLMs/agents to solve challenging problems, such as scientific discovery.
+                My recent research focus is to <strong>understand, advance and safely deploy generative models and agents</strong>. My next vision is (i) what's the next generation of thinking paradigm to enable LLMs solve challenging questions, e.g., scientific discovery? (ii) what's the next generation of attention paradigm in LLMs?
               </p>
               <p>
                 <font color="red"><strong>I am looking for full-time positions of research scientist or member of technical staff, please contact me if you are interested in my research.</strong></font>
@@ -57,6 +57,9 @@
             <heading>News</heading>
 
           <ul>
+            <li>
+              <strong>[2026.01]</strong>: I was invited to give a talk about <a href="./pdf/attention_sink_ns_talk.pdf">Demystifying Attention Sink in LLMs and its Applications to Architecture Design</a> by <a href="https://aerlabs.tech">AER Labs</a> at <a href="https://ns.com">Network School</a>.
+            </li>
             <li>
               <strong>[2025.11]</strong>: I was invited to give a talk about <a href="pdf/attention_sink_hunyuan_talk.pdf">Attention Sink in LLMs and its Applications</a> by <a href="https://www.ee.tsinghua.edu.cn/en/">Department of Electronic Engineering, Tsinghua University</a> and <a href="https://hunyuan.tencent.com/visual">Tencent Hunyuan</a>.
             </li>
@@ -193,7 +196,7 @@
             <br>
             <u><strong>Xiangming Gu</strong></u> and the Team
             <br>
-              <strong>Released</strong> as Google Deepmind Technical Report, 2025.
+              Google Deepmind Internal Technical Report, 2025.
             <br>
           </td>
         </tr>
@@ -221,9 +224,9 @@
             <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Ye Wang</a>&dagger;,
             <a href="http://linmin.me">Min Lin</a>
             <br>
-            <strong>Highlights</strong>: (i) We presented mechanism understanding of attention sink, massive activations, and value drains in LLMs. (ii) We answered when attention sink emerges in LLMs from pre-training perspective. (iii) We represented the early explorations on LLM architecture designs from the perspective of attention sink biases, and eliminating attention sink. (iv) This research can explain the motivations of attention biases used in large-scale LLMs, like <a href="https://arxiv.org/abs/2508.10925">GPT-OSS</a> (OpenAI), and <a href="https://mimo.xiaomi.com/blog/mimo-v2-flash">MiMo-V2-Flash</a> (Xiaomi).
-            <br>
-              <strong>Published</strong> in International Conference on Learning Representations (<strong>ICLR</strong>), Singapore, Singapore, 2025. (<font color="red"><strong>Spotlight</strong></font>)
+            <!-- <strong>Highlights</strong>: (i) We presented mechanism understanding of attention sink, massive activations, and value drains in LLMs. (ii) We answered when attention sink emerges in LLMs from pre-training perspective. (iii) We represented the early explorations on LLM architecture designs from the perspective of attention sink biases, and eliminating attention sink. (iv) This research can explain the motivations of attention biases used in large-scale LLMs, like <a href="https://arxiv.org/abs/2508.10925">GPT-OSS</a> (OpenAI), and <a href="https://mimo.xiaomi.com/blog/mimo-v2-flash">MiMo-V2-Flash</a> (Xiaomi).
+            <br> <strong>Published</strong> in  -->
+              International Conference on Learning Representations (<strong>ICLR</strong>), Singapore, Singapore, 2025. (<font color="red"><strong>Spotlight</strong></font>)
             <br>
             Also in Annual Conference on Neural Information Processing Systems Workshop on Attributing Model Behavior at Scale (<strong>ATTRIB @ NeurIPS</strong>), Vancouver, Canada, 2024. (<font color="red"><strong>Oral</strong></font>)
             <br>
@@ -251,9 +254,9 @@
               <a href="https://petar-v.com/">Petar Veličković</a>,
               <a href="https://sites.google.com/view/razp/home">Razvan Pascanu</a>
               <br>
-              <strong>Highlights</strong>: (i) We empirically and theoretically showed that LLMs need "no-op" to avoid over-mixing, especially in long-context scenario. (ii) We demonstrated that attention sink is one way to approximate "no-op". (iii) This research can explain the motivations of gated attention used in large-scale LLMs, like <a href="https://qwen.ai/blog?id=e34c4305036ce60d55a0791b170337c2b70ae51d&from=home.latest-research-list">Qwen3-Next</a> (Alibaba).
-              <br>
-                 <strong>Published</strong> in Conference on Language Modeling (<strong>COLM</strong>), Montreal, Canada, 2025.
+              <!-- <strong>Highlights</strong>: (i) We empirically and theoretically showed that LLMs need "no-op" to avoid over-mixing, especially in long-context scenario. (ii) We demonstrated that attention sink is one way to approximate "no-op". (iii) This research can explain the motivations of gated attention used in large-scale LLMs, like <a href="https://qwen.ai/blog?id=e34c4305036ce60d55a0791b170337c2b70ae51d&from=home.latest-research-list">Qwen3-Next</a> (Alibaba).
+              <br> <strong>Published</strong> in  -->
+                Conference on Language Modeling (<strong>COLM</strong>), Montreal, Canada, 2025.
               <br>
               <a href="https://arxiv.org/pdf/2504.02732">pdf</a> /
               <a href="pdf/attention_sink_hunyuan_talk.pdf">slides</a>
@@ -317,9 +320,9 @@
               <a href="https://iliaishacked.github.io">Ilia Shumailov</a>,
               <a href="https://jamiehay.es">Jamie Hayes</a>
               <br>
-              <strong>Highlights</strong>: (i) We showed that with only chat template as input, alignment (post-trained) data can be extracted from post-trained (either SFT or RLVR) LLMs. (ii) We presented "di-steal-ation": the extracted data can be used to train (either SFT or RLVR) a base model, recovering a meaningful amount of the original performance.
-              <br>
-                <strong>Released</strong> as Technical Report, 2025.
+              <!-- <strong>Highlights</strong>: (i) We showed that with only chat template as input, alignment (post-trained) data can be extracted from post-trained (either SFT or RLVR) LLMs. (ii) We presented "di-steal-ation": the extracted data can be used to train (either SFT or RLVR) a base model, recovering a meaningful amount of the original performance.
+              <br> <strong>Released</strong> as  -->
+                Technical Report, 2025.
               <br>
               <a href="https://arxiv.org/pdf/2510.18554">pdf</a>
             </td>
@@ -341,9 +344,9 @@
               <a href="http://www.mysmu.edu/faculty/jingjiang/">Jing Jiang</a>&dagger;,
               <a href="http://linmin.me">Min Lin</a>
               <br>
-              <strong>Highlights</strong>: (i) We presented theoretical framework of infectious jailbreak (or AI virus), which could jailbreak large-scale LLM-based multi-agents exponentially fast. (ii) We empirically validated the success of infectious jailbreak in LLM-based multi-agents (up to 1 million agents).
-              <br>
-              <strong>Published</strong> in International Conference on Machine Learning (<strong>ICML</strong>), Vienna, Austria, 2024.
+              <!-- <strong>Highlights</strong>: (i) We presented theoretical framework of infectious jailbreak (or AI virus), which could jailbreak large-scale LLM-based multi-agents exponentially fast. (ii) We empirically validated the success of infectious jailbreak in LLM-based multi-agents (up to 1 million agents).
+              <br>  <strong>Published</strong> in -->
+              International Conference on Machine Learning (<strong>ICML</strong>), Vienna, Austria, 2024.
               <br>
               Also in International Conference on Learning Representations Workshop on Large Language Model Agents (<strong>LLMAgents @  ICLR</strong>), Vienna, Austria, 2024.
               <br>
@@ -373,10 +376,10 @@
               <a href="https://zhenxuan00.github.io">Chongxuan Li</a>,
               <a href="http://linmin.me">Min Lin</a>,
               <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Ye Wang</a>&dagger;
-              <br>
-              <strong>Highlights</strong>: (i) We showed that diffusion models have theoretical optimal solutions, which can only memorize training data. (ii) We empirically explored how training recipes affect memorization of diffusion models.
-              <br>
-              <strong>Published</strong> in Transactions on Machine Learning Research (<strong>TMLR</strong>), 2025.
+              <!-- <br>
+              <strong>Highlights</strong>: (i) We showed that diffusion models have theoretical optimal solutions, which can only memorize training data. (ii) We empirically explored how training recipes affect memorization of diffusion models. <strong>Published</strong> in  -->
+              <br> 
+              Transactions on Machine Learning Research (<strong>TMLR</strong>), 2025.
               <br>
               <a href="https://arxiv.org/pdf/2310.02664.pdf">pdf</a> /
               <a href="https://github.com/sail-sg/DiffMemorize">code</a>		
@@ -775,7 +778,7 @@
                   <br>
                   Also worked closed with <a href="https://www.razp.info">Razvan Pascanu</a> and <a href="https://sohamde.github.io">Soham De</a>.
                   <br>
-                Exploring reasoning and test-time-scaling of LLMs. Developing tools to debug LLMs.
+                Research on reasoning and test-time-scaling of LLMs. Developing <a href="https://github.com/google-deepmind/gemma_penzai">gemma_penzai</a> to debug LLMs.
                 </a> 
               </td>
             </tr>
@@ -885,6 +888,8 @@
               
               <tr>
                 <td width="100%" valign="center">
+                  <strong>[2026.01]</strong>: <a href="https://aerlabs.tech">AER Labs</a> and <a href="https://ns.com">Network School</a>, invited talk on <a href="./pdf/attention_sink_ns_talk.pdf">Demystifying Attention Sink in LLMs and its Applications to Architecture Design</a>.
+                  <br>
                   <strong>[2025.11]</strong>: <a href="https://www.ee.tsinghua.edu.cn/en/">Department of Electronic Engineering, Tsinghua University</a> and <a href="https://hunyuan.tencent.com/visual">Tencent Hunyuan</a>, invited talk on <a href="pdf/attention_sink_hunyuan_talk.pdf">Attention Sink in LLMs and its Applications</a>.
                   <br>
                   <strong>[2025.10]</strong>: Google Deepmind Team DL: Agent Frontier, talk on <strong>Looking into LLMs: From Tokens to Solutions</strong>.
