--- a/index.html
+++ b/index.html
@@ -58,14 +58,17 @@
 
           <ul>
             <li>
+              <strong>[2026.01]</strong>: I released <a href="https://github.com/google-deepmind/gemma_penzai">gemma_penzai</a>, a JAX package to look into LLM internals and debug LLMs with multi-modal support. This work was one of my projects at Google Deepmind.
+            </li>
+            <li>
               <strong>[2026.01]</strong>: I was invited to give a talk about <a href="./pdf/attention_sink_ns_talk.pdf">Demystifying Attention Sink in LLMs and its Applications to Architecture Design</a> by <a href="https://aerlabs.tech">AER Labs</a> at <a href="https://ns.com">Network School</a>.
             </li>
             <li>
               <strong>[2025.11]</strong>: I was invited to give a talk about <a href="pdf/attention_sink_hunyuan_talk.pdf">Attention Sink in LLMs and its Applications</a> by <a href="https://www.ee.tsinghua.edu.cn/en/">Department of Electronic Engineering, Tsinghua University</a> and <a href="https://hunyuan.tencent.com/visual">Tencent Hunyuan</a>.
             </li>
-            <li>
+            <!-- <li>
               <strong>[2025.11]</strong>: I re-joined <a href="https://deepmind.google/">Google Deepmind (GDM)</a> in Singapore office to continue as a student researcher!
-            </li>
+            </li> -->
             <li>
               <strong>[2025.10]</strong>: I was glad to give a final presentation to wrap up my student researcher at Google Deepmind: <strong>Looking into LLMs: From Tokens to Solutions</strong>.
             </li>
