--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
           <ul>
             <li>
-              <strong>[2026.01]</strong>: I released <a href="https://github.com/google-deepmind/gemma_penzai">gemma_penzai</a>, a JAX package to look into LLM internals and debug LLMs with multi-modal support. This work was one of my projects at Google Deepmind.
+              <strong>[2026.01]</strong>: I released <a href="https://github.com/google-deepmind/gemma_penzai">gemma_penzai</a>, a JAX package to look into LLM internals and debug LLMs with multi-modal support. This work was one of my projects at Google Deepmind. See the <a href="https://github.com/google-deepmind/gemma_penzai/tree/main/notebooks">tutorials</a>.
             </li>
             <li>
               <strong>[2026.01]</strong>: I was invited to give a talk about <a href="./pdf/attention_sink_ns_talk.pdf">Demystifying Attention Sink in LLMs and its Applications to Architecture Design</a> by <a href="https://aerlabs.tech">AER Labs</a> at <a href="https://ns.com">Network School</a>.
@@ -750,7 +750,7 @@
               
               <tr>
                 <td width="100%" valign="center">
-                  <a href="https://github.com/google-deepmind/gemma_penzai">gemma_penzai</a>: A JAX Research Toolkit for Visualizing, Manipulating, and Understanding <a href="https://github.com/google-deepmind/gemma">Gemma</a> Models with <strong>Multi-modal Support</strong> based on <a href="https://github.com/google-deepmind/penzai">Penzai</a>.
+                  <a href="https://github.com/google-deepmind/gemma_penzai">gemma_penzai</a>: A JAX Research Toolkit for Visualizing, Manipulating, and Understanding <a href="https://github.com/google-deepmind/gemma">Gemma</a> Models with <strong>Multi-modal Support</strong>. Tutorials on <a href="https://github.com/google-deepmind/gemma_penzai/blob/main/notebooks/mech_interp/attention_and_logit_lens.ipynb">attention sink</a>, <a href="https://github.com/google-deepmind/gemma_penzai/blob/main/notebooks/mech_interp/attention_and_logit_lens.ipynb">logit-lens</a>, <a href="https://github.com/google-deepmind/gemma_penzai/blob/main/notebooks/mech_interp/gemma_scope1.ipynb">Gemma Scope 1</a> and <a href="https://github.com/google-deepmind/gemma_penzai/blob/main/notebooks/mech_interp/gemma_scope2.ipynb">2</a>.
                 </td>
               </tr>
             </tbody></table>
