--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 I am a student researcher at <a href="https://deepmind.google/">Google Deepmind</a> in Singapore (was based in London, United Kingdom), where I am hosted by <a href="https://petar-v.com/">Petar Veličković</a> and <a href="https://scholar.google.ru/citations?user=jM6Y0yAAAAAJ&hl=en">Larisa Markeeva</a>, and work closely with <a href="https://www.razp.info">Razvan Pascanu</a> and <a href="https://sohamde.github.io">Soham De</a>. I was lucky to be mentored by <a href="https://p2333.github.io">Tianyu Pang</a> and <a href="https://duchao0726.github.io">Chao Du</a> at <a href="https://sail.sea.com">Sea AI lab (SAIL)</a>, Singapore, where I also worked closely with <a href="https://siviltaram.github.io">Qian Liu</a> and <a href="https://linmin.me">Min Lin</a>.
               </p> -->
               <p>
-                My recent research focus is to <strong>understand, advance and safely deploy generative models and agents</strong>. My next vision is (i) what's the next generation of thinking paradigm to enable LLMs solve challenging questions, e.g., scientific discovery? (ii) what's the next generation of scaling axis in LLM architecture?
+                My current research interests include <strong>LLMs pre-training and achitecture design, LLMs reasoning</strong>. My next vision is (i) what's the next generation of thinking paradigm to enable LLMs solve challenging questions, e.g., scientific discovery? (ii) what's the next generation of scaling axis in LLM architecture?
               </p>
               <!-- <p>
                 <font color="red"><strong>I am looking for full-time positions of research scientist or member of technical staff, please contact me if you are interested in my research.</strong></font>
